--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
